# depsize

./: .gitignore  LICENSE  README.md  example.py  justfile  pyproject.toml
.github/workflows/: release.yml
requirements/: dev.txt  main.txt
src/depsize/: depsize.py
src/pydeps/: pydeps.py
src/pydeps_size/: pydeps.py
tests/: test_get_pip_packages.py
tests/integration/: test_conda.py  test_poetry.py
