[project]
name = "pydeps"
version = "0.1.0"
description = "A package that tells you the size of your dependencies in Megabytes!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.12",
]

[project.scripts]
pydeps = "pydeps.pydeps:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"