[project]
name = "depsize"
version = "0.1.1"
description = "A package that tells you the size of your dependencies in Megabytes!"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.12",
]

[project.scripts]
depsize = "depsize.depsize:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true